# hermes-trading

./: .gitignore  CUserspointAppDataLocalTemprailway_trades.jsonl  Dockerfile  README.md  analysis.py  hermes_trades_live.jsonl  monitor.py  pyproject.toml
docs/superpowers/plans/: 2026-06-26-hermes-phase-a-restore-eyesight.md  2026-06-26-hermes-phase-b-smarter-instruments.md  phase-a-baseline.txt
docs/superpowers/specs/: 2026-06-26-hermes-recovery-design.md
hermes_trading/: __init__.py  api.py  loop.py  reflect.py  run.py  score.py  telemetry.py  watchdog.py
hermes_trading/adapters/: __init__.py  macro.py  news.py  onchain.py  price.py
scripts/: verify_performance.py
state/: goal.yaml  hypotheses.jsonl  strategy.yaml
state/history/: v03.yaml  v06.yaml  v08.yaml  v09.yaml  v10.yaml  v11.yaml  v12.yaml  v19.yaml  v21.yaml  v23.yaml  v24.yaml  v25.yaml  v26.yaml
tests/: test_action_bounds.py  test_guard_min_sample.py  test_prompt_enrichment.py  test_restore_dedup.py  test_revert_guard_gradient.py  test_score_gradient.py  test_telemetry.py  test_verify_performance.py
